--- a/src/app/searcher/searcher-table/texta-facts-chips/texta-facts-chips.component.scss
+++ b/src/app/searcher/searcher-table/texta-facts-chips/texta-facts-chips.component.scss
@@ -1,8 +1,7 @@
 span {
-  border-radius: 20px;
-  padding: 5px 10px;
-  line-height: 2.3;
-  margin-right: 5px;
+  padding: 4px 12px;
+  border-radius: 16px;
+  margin: 3px;
   white-space: nowrap;
   cursor: pointer;
   transition: .2s filter;
